.provarCaches/00Df2000001KKNJEA4/objects/Incapsulate_Log__Log_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Incapsulate_Log__Hostname__c</fullName>
        <label>Hostname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapsulate_Log__Include_Hostname__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Hostname</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incapsulate_Log__Include_Userinfo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Userinfo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incapsulate_Log__Tag__c</fullName>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapsulate_Log__Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log Config</label>
    <pluralLabel>Log Configs</pluralLabel>
</CustomObject>